# services/userService/src/routes/authRoute.ts
@@ -68,7 +68,8 @@ router.post('/reset-password', async (req, res, next) => {
   }
 
   const ok = await resetPassword(email, code, newPassword)
-  if (!ok) {
+  // Note: Should not normally occur due to resetPassword throwing errors on failure modes
+  if (!ok) { 
     return next(new AppError('OTP is incorrect or User does not exist', 400))
   }
 
